--- a/app/src/main/res/layout-land/dialog_cover_browser_content.xml
+++ b/app/src/main/res/layout-land/dialog_cover_browser_content.xml
@@ -25,16 +25,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_content"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingStart="?attr/dialogPreferredPadding"
-    android:paddingTop="@dimen/dialogPreferredPaddingTop"
-    android:paddingEnd="?attr/dialogPreferredPadding"
-    android:paddingBottom="@dimen/dialogPreferredPaddingBottom"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    >
+    style="@style/Dialog.Content">
 
-    <include layout="@layout/inc_dialog_title" />
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/dialog_toolbar"
+        style="@style/Toolbar.Dialog.Content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="@string/lbl_covers_long"
+        />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progress_bar"
@@ -45,7 +45,7 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/preview"
-        app:layout_constraintTop_toBottomOf="@id/title_divider"
+        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar"
         tools:visibility="visible"
         />
 
@@ -81,7 +81,7 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar"
         tools:ignore="ContentDescription"
         tools:src="@sample/covers"
         tools:visibility="visible"
