--- a/app/src/main/res/layout/dialog_cover_browser.xml
+++ b/app/src/main/res/layout/dialog_cover_browser.xml
@@ -36,7 +36,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            style="@style/Toolbar.Dialog"
+            style="@style/Toolbar.Dialog.Fullscreen"
             app:title="@string/lbl_covers_long"
             />
 
