--- a/app/src/main/res/layout/dialog_edit_book_series.xml
+++ b/app/src/main/res/layout/dialog_edit_book_series.xml
@@ -29,9 +29,9 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:viewBindingIgnore="true"
     >
 
@@ -43,7 +43,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            style="@style/Toolbar.Dialog"
+            style="@style/Toolbar.Dialog.Fullscreen"
             app:menu="@menu/toolbar_action_save"
             app:title="@string/lbl_series"
             />
