--- a/app/src/main/res/layout/dialog_edit_loan.xml
+++ b/app/src/main/res/layout/dialog_edit_loan.xml
@@ -36,7 +36,7 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            style="@style/Toolbar.Dialog"
+            style="@style/Toolbar.Dialog.Fullscreen"
             app:menu="@menu/toolbar_action_save"
             app:title="@string/lbl_lend_book_to_colon"
             />
