--- a/app/src/main/res/layout/dialog_toc_confirm.xml
+++ b/app/src/main/res/layout/dialog_toc_confirm.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -22,7 +22,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Dialog.Body"
+    style="@style/Dialog.Content"
     android:orientation="vertical"
     tools:viewBindingIgnore="true"
     >
