--- a/app/src/main/res/menu/toolbar_select_style_floating_dialog.xml
+++ b/app/src/main/res/menu/toolbar_select_style_floating_dialog.xml
@@ -19,20 +19,17 @@
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/Dialog.Content"
-    android:orientation="vertical"
-    tools:viewBindingIgnore="true"
-    >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/content"
-        style="@style/Text.Body"
-        android:textAppearance="?attr/textAppearanceBodyLarge"
-        android:textIsSelectable="true"
-        android:maxLines="20"
-        tools:text="@tools:sample/lorem/random"
-        />
-</LinearLayout>
+    <item
+        android:id="@id/MENU_STYLE_LIST_TOGGLE"
+        android:icon="@drawable/ic_baseline_unfold_more_24"
+        android:title="@string/action_more_ellipsis"
+        app:showAsAction="always" />
+    <item
+        android:id="@id/MENU_EDIT"
+        android:icon="@drawable/ic_baseline_edit_24"
+        android:title="@string/action_edit"
+        app:showAsAction="ifRoom" />
+</menu>
