--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -87,6 +87,8 @@
          the 18/12 is taken from "abc_dialog_padding_top_material" -->
     <dimen name="dialogPreferredPaddingTop">18dp</dimen>
     <dimen name="dialogPreferredPaddingBottom">12dp</dimen>
+    <dimen name="app_m3_alert_dialog_action_bottom_padding">14dp</dimen>
+    <dimen name="app_m3_alert_dialog_action_top_padding">14dp</dimen>
 
     <!-- Make a header text align with list elements which are preceded by an icon.
          Intention is to mimic a PreferenceCategory title indent. -->
