--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -129,18 +129,20 @@
     <!-- Special style for RecyclerView's embedded in a FFBaseDialogFragment -->
     <style name="Dialog.Body.RecyclerView"
            parent="">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+
         <item name="android:paddingTop">@dimen/dialogPreferredPaddingTop</item>
         <item name="android:paddingBottom">@dimen/dialogPreferredPaddingBottom</item>
         <item name="android:paddingStart">?attr/dialogPreferredPadding</item>
         <item name="android:paddingEnd">?attr/dialogPreferredPadding</item>
 
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">0dp</item>
+        <item name="layout_constraintVertical_bias">0.0</item>
+
         <item name="android:fadeScrollbars">false</item>
         <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
         <item name="android:scrollbars">vertical</item>
         <item name="layoutManager">androidx.recyclerview.widget.LinearLayoutManager</item>
-        <item name="layout_constraintVertical_bias">0.0</item>
         <item name="layout_behavior">@string/appbar_scrolling_view_behavior</item>
     </style>
 
@@ -148,7 +150,7 @@
     <style name="Dialog.Content"
            parent="">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
 
         <item name="android:paddingTop">@dimen/dialogPreferredPaddingTop</item>
         <item name="android:paddingBottom">@dimen/dialogPreferredPaddingBottom</item>
@@ -234,10 +236,10 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
 
-        <item name="android:paddingStart">12dp</item>
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingEnd">12dp</item>
-        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingStart">?attr/dialogPreferredPadding</item>
+        <item name="android:paddingEnd">?attr/dialogPreferredPadding</item>
+        <item name="android:paddingTop">@dimen/app_m3_alert_dialog_action_top_padding</item>
+        <item name="android:paddingBottom">@dimen/app_m3_alert_dialog_action_bottom_padding</item>
     </style>
 
     <!-- *************************************************************************************** -->
